# aspen

./: .gitignore  LICENSE  README.md  pyproject.toml
aspen/: README.md  __init__.py  constants.py  main.py
aspen/collisions/: H_O_cross_sections.txt  __init__.py  _reaction_common.py  charge_exchange.py  collision_frequency.py  elastic_collision.py  particle_collision.py  scattering_angle.py
aspen/neutral_density_model/: __init__.py  amps.py  gitm.py
aspen/particle_initialization/: particle.py
aspen/rates/: __init__.py  altitude_profile.py  common.py  heating_rate.py  ionization_rate.py  lyman_alpha.py  profile_output.py
aspen/simulation/: adaptive_step.py  history.py  monte_carlo.py  numba_transport.py  particle_state.py  tracing.py
aspen_zc/: README.md  __init__.py
aspen_zc/cross_sections/: H_CO2_cross_sections.txt  H_N2_cross_sections.txt  Hplus_N2_cross_sections.txt  __init__.py  _reaction_common.py  collision_frequency.py  collision_sampler.py  cross_section.py  elastic_collision.py  ionization.py  lyman_alpha_emission.py  particle_collision.py  scattering_angle_distribution.txt
aspen_zc/neutral_density_model/: __init__.py  amps.py  gitm.py
aspen_zc/particle_initialization/: particle.py
aspen_zc/plotting_results/: trajectory.py
aspen_zc/simulation/: adaptive_step.py  history.py  monte_carlo.py  numba_transport.py  particle_state.py  tracing.py
docs/: aspen_quick_start_zh.md  aspen_zc_quick_start_zh.md  py_aspen_quick_start_zh.md
py_aspen/: README.md  main.py
py_aspen/collisions/: Hplus_CO2_cross_sections.txt  Hplus_O_cross_sections.txt  __init__.py  _reaction_common.py  collision_frequency.py  elastic_collision.py  electron_stripping.py  particle_collision.py
py_aspen/neutral_density_model/: __init__.py  amps.py  gitm.py
scripts/: example_run_single_particle_aspen.py  example_run_single_particle_aspen_zc.py  example_run_single_particle_py_aspen.py  run_aspen_monte_carlo_h_ena_600km.py  run_aspen_monte_carlo_rates_1000.py  run_aspen_zc_monte_carlo_h_ena_600km.py  run_py_aspen_monte_carlo_h_ena_600km.py  run_py_aspen_monte_carlo_rates_1000.py
(+14 files in other folders)
