[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aspen"
version = "0.1.0"
description = "ASPEN-style Monte Carlo transport tools for Mars proton aurora test particles."
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
]

[tool.setuptools]
packages = [
    "aspen",
    "aspen.collisions",
    "aspen.neutral_density_model",
    "aspen.particle_initialization",
    "aspen.plotting_results",
    "aspen.simulation",
]

[tool.setuptools.package-data]
aspen = [
    "collisions/*.txt",
    "neutral_density_model/data/*.mat",
]
