[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py_aspen"
version = "0.1.0"
description = "ASPEN-style Monte Carlo transport tools for Mars proton aurora test particles."
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
]

[tool.setuptools]
packages = [
    "py_aspen",
    "py_aspen.collisions",
    "py_aspen.neutral_density_model",
    "py_aspen.particle_initialization",
    "py_aspen.plotting_results",
    "py_aspen.rates",
    "py_aspen.simulation",
]

[tool.setuptools.package-data]
py_aspen = [
    "collisions/*.txt",
    "neutral_density_model/data/*.mat",
]
